ORC-1024: [C++] Fix inconsistent bloom filter hashing

The Java codes use "long" which is signed in hashing. To be consistent,
the corresponding C++ codes should use int64_t instead of uint64_t.

This fixes inconsistent hash values for some integers.