c++/test/TestReader.cc
@@ -101,4 +101,33 @@ namespace orc {
       900, rowsInCurrentStripe, rowIndexStride, includedRowGroups));
   }
 
+  TEST(TestRowReader, testSkipBadBloomFilters) {
+    std::stringstream ss;
+    if(const char* example_dir = std::getenv("ORC_EXAMPLE_DIR")) {
+      ss << example_dir;
+    } else {
+      ss << "../../../examples";
+    }
+    // Read a file with bloom filters written by CPP writer in version 1.6.11.
+    ss << "/bad_bloom_filter_1.6.11.orc";
+    orc::ReaderOptions readerOpts;
+    std::unique_ptr<orc::Reader> reader =
+      orc::createReader(orc::readLocalFile(ss.str().c_str()), readerOpts);
+
+    // Create SearchArgument with a EQUALS predicate which can leverage the bloom filters.
+    orc::RowReaderOptions rowReaderOpts;
+    std::unique_ptr<orc::SearchArgumentBuilder> sarg =
+      orc::SearchArgumentFactory::newBuilder();
+    sarg->equals(1, orc::PredicateDataType::LONG, orc::Literal(18000000000L));
+    std::unique_ptr<orc::SearchArgument> final_sarg = sarg->build();
+    rowReaderOpts.searchArgument(std::move(final_sarg));
+    std::unique_ptr<orc::RowReader> rowReader = reader->createRowReader(rowReaderOpts);
+
+    // Make sure bad bloom filters won't affect the results.
+    std::unique_ptr<orc::ColumnVectorBatch> batch =
+      rowReader->createRowBatch(1024);
+    EXPECT_TRUE(rowReader->next(*batch));
+    EXPECT_EQ(5, batch->numElements);
+    EXPECT_FALSE(rowReader->next(*batch));
+  }
 }  // namespace
